# GameEngine

./: CMakeLists.txt
Source/: CMakeLists.txt
Source/GameEngine/: Transform.cpp  Transform.h
Source/Maia/GameEngine/: CMakeLists.txt  Component.hpp  Component_group.hpp  Component_group.natvis  Component_group_builder.hpp  Component_group_mask.hpp  Component_types_group.hpp  Entity.hpp  Entity_manager.cpp  Entity_manager.hpp  Entity_type.hpp  Memory_chunk.hpp
Source/Maia/GameEngine/Components/: Local_position.hpp  Local_rotation.hpp  Position.hpp  Rotation.hpp
Source/Maia/GameEngine/Systems/: Transform_system.cpp  Transform_system.hpp
Source/Maia/GameEngine/Transforms/: Transform.cpp
Test/: CMakeLists.txt
Test/UnitTest/: CMakeLists.txt  Component_group.test.cpp  Entity_manager.test.cpp  Memory_chunk.test.cpp  Test_components.hpp
Test/UnitTest/Systems/: Transform_system.test.cpp
